--- a/Web/sample/index.html
+++ b/Web/sample/index.html
@@ -44,7 +44,7 @@
 } 
 .button { 
     font-family: "Arail", "Î¢ÈíÑÅºÚ"; 
-    font-size: 12pt; color: #ffffff; 
+    font-size: 12pt; color: ; 
     border: 0px #93bee2 solid; 
     /*background-image:url(<img src="./imege/button-³£Ì¬.png" />);*/ 
     background-color: #7AC143; 
