--- a/Web/scheduling/web/index.html
+++ b/Web/scheduling/web/index.html
@@ -69,11 +69,11 @@
                         <span slot="title">人员信息</span>
                     </el-menu-item>
                     <el-menu-item index="排班" data-src="paiban.html">
-                        <i class="el-icon-user-solid"></i>
+                        <i class="el-icon-s-marketing"></i>
                         <span slot="title">排班</span>
                     </el-menu-item>
                     <el-menu-item index="排班明细" data-src="paiban_detail.html">
-                        <i class="el-icon-user-solid"></i>
+                        <i class="el-icon-s-management"></i>
                         <span slot="title">排班明细</span>
                     </el-menu-item>
                 </el-menu>
