--- a/Web/scheduling/web/time.html
+++ b/Web/scheduling/web/time.html
@@ -346,6 +346,7 @@
                                 _this.holidayPage.nowPage = 1;
                                 _this.holidayPage.pageList = [];
                                 _this.getHolidayPage();
+                                _this.holidayDarwerLoading=false;
                                 _this.holidayIsAdd = false;
                             }
                             if (res.code == 500) {
