--- a/Web/scheduling/web/bom.html
+++ b/Web/scheduling/web/bom.html
@@ -87,7 +87,7 @@
                     <el-table-column prop="useNum" label="使用数量" sortable></el-table-column>
                     <el-table-column label="操作">
                         <template slot-scope="scope">
-                            <el-popconfirm title="确定删除吗？" @confirm="deleteBom(scope.row.id)" hide-icon>
+                            <el-popconfirm title="物料可能正在使用，确定删除吗？" @confirm="deleteBom(scope.row.id)" hide-icon>
                                 <el-button icon="el-icon-delete" type="danger" size="small" slot="reference">删除</el-button>
                             </el-popconfirm>
                         </template>
