--- a/Web/scheduling/web/index.html
+++ b/Web/scheduling/web/index.html
@@ -25,13 +25,19 @@
             </div>
             <span class="header-title">云合排产管理系统</span>
             <el-dropdown trigger="hover" class="dropdown" @command="handleDropdown">
+                <!--<span class="el-dropdown-link" v-model="username">
+                    
+                </span>-->
+                <!--<el-input placeholder="订单号" v-model="username" clearable style=""></el-input>-->
                 <span class="el-dropdown-link">
                     我的
                     <i class="el-icon-arrow-down el-icon--right"></i>
                 </span>
                 <el-dropdown-menu slot="dropdown">
-                <el-dropdown-item command="updatePwd">修改密码</el-dropdown-item>
+                <el-dropdown-item command="updatePwd"><span v-text="username"></span></el-dropdown-item>
+                <el-dropdown-item ><span v-text="department"></span></el-dropdown-item>
                 <el-dropdown-item command="exit">退出登录</el-dropdown-item>
+
                 </el-dropdown-menu>
             </el-dropdown>
         </el-menu>
@@ -55,6 +61,10 @@
                     <el-menu-item index="排产" data-src="work.html">
                         <i class="el-icon-date"></i>
                         <span slot="title">排产</span>
+                    </el-menu-item>
+                    <el-menu-item index="排产核对" data-src="check.html">
+                        <i class="el-icon-date"></i>
+                        <span slot="title">排产核对</span>
                     </el-menu-item>
                     <el-menu-item index="汇总" data-src="summary.html">
                         <i class="el-icon-document"></i>
@@ -109,8 +119,10 @@
                 collapse: false,
                 breadcrumbs: [],
 
-                iframeSrc: '',
+                username:'',
+                department: '',
 
+                iframeSrc: '',
                 updateFormVisisble: false,
                 updPwdForm: {},
                 updPwdRules: {
@@ -120,6 +132,52 @@
                 updatePwdLoading: false
             },
             methods: {
+                getUsername: function () {
+                    var _this = this;
+                    axios.post(myUrl('user/getUsername'), {
+
+                    }).then(function (res) {
+                        if (res.code == 200) {
+                            _this.username = res.data
+                        }
+                        if (res.code == 500) {
+                            _this.$notify({
+                                title: res.msg,
+                                type: 'error'
+                            });
+                        }
+
+                    }).catch(function (err) {
+                        _this.$notify.error({
+                            title: err.msg
+                        });
+
+                    })
+
+                },
+                getDepartment: function () {
+                    var _this = this;
+                    axios.post(myUrl('user/getDepartment'), {
+
+                    }).then(function (res) {
+                        if (res.code == 200) {
+                            _this.department = res.data
+                        }
+                        if (res.code == 500) {
+                            _this.$notify({
+                                title: res.msg,
+                                type: 'error'
+                            });
+                        }
+
+                    }).catch(function (err) {
+                        _this.$notify.error({
+                            title: err.msg
+                        });
+
+                    })
+
+                },
                 handleSelect: function (index, path, el) {
                     var this_ = this;
                     this_.breadcrumbs = path;
@@ -177,6 +235,8 @@
                     })
                 }
             },
+            
+
             computed: {
                 asideClass: function () {
                     return 'aside ' + (!this.collapse ? 'aside-open' : 'aside-close');
@@ -188,6 +248,9 @@
                 window.onresize = function () {
                     this_.windowResize();
                 }
+                this_.getUsername();
+                this_.getDepartment();
+
             }
         })
     </script>
