--- a/Web/scheduling/web/paibanbiao_renyuan.html
+++ b/Web/scheduling/web/paibanbiao_renyuan.html
@@ -24,7 +24,7 @@
                     <el-col :span="8">
                         <el-button-group>
                             <el-button icon="el-icon-refresh" type="primary" :disabled="loading" @click="getList">刷新</el-button>
-                            <el-button icon="el-icon-circle-plus-outline" type="primary" @click="addVisible = true">添加</el-button>
+                            <el-button icon="el-icon-circle-plus-outline" type="primary" @click="addVisible = true;">添加</el-button>
                         </el-button-group>
                     </el-col>
                 </el-row>
@@ -51,7 +51,18 @@
                                     <el-input v-model="props.row.id_number" style="width: 220px"></el-input>
                                 </el-form-item>
                                 <el-form-item label="部门名称" prop="department_name">
-                                    <el-input v-model="props.row.department_name" style="width: 220px"></el-input>
+                                    <el-select v-model="props.row.department_name" filterable placeholder="请选择部门" style="width: 220px">
+                                        <el-option 
+                                            v-for="item in departmentList"
+                                            :key="item.department_name" 
+                                            :label="item.department_name" 
+                                            :value="item.department_name"
+                                        >
+                                            <!--<span style="float: left">{{item.department_name}}</span>-->
+                                        </el-option>
+
+                                    </el-select>    
+                                    <!--<el-input v-model="props.row.department_name" style="width: 220px"></el-input>-->
                                 </el-form-item>
                                 <el-form-item label="班次" prop="banci">
                                     <el-input v-model="props.row.banci" style="width: 220px"></el-input>
@@ -118,8 +129,27 @@
                 <el-form-item label="身份证号" prop="id_number">
                     <el-input v-model="paibanbiao_renyuan.id_number" style="width: 300px"></el-input>
                 </el-form-item>
-                <el-form-item label="部门" prop="department_name" >
+                <!--<el-form-item label="部门" prop="department_name" >
                     <el-input v-model="paibanbiao_renyuan.department_name" style="width: 300px"></el-input>
+                </el-form-item>-->
+                <el-form-item label="部门" prop="department_name">
+                    <el-select v-model="paibanbiao_renyuan.department_name" filterable placeholder="请选择部门" style="width: 300px">
+                        <!--<el-option 
+                            v-for="item in departmentList"
+                            :key="item.department_name" 
+                            :label="item.department_name" 
+                            :value="item.department_name"
+                        >-->
+                        <el-option 
+                            v-for="item in departmentList"
+                            :key="item.department_name" 
+                            :label="item.department_name" 
+                            :value="item.department_name"
+                        >
+                            <span style="float: left">{{item.department_name}}</span>
+                        </el-option>
+
+                    </el-select>               
                 </el-form-item>
                 <el-form-item label="班次" prop="banci">
                     <el-input v-model="paibanbiao_renyuan.banci" style="width: 300px"></el-input>
@@ -146,7 +176,8 @@
                 updateLoading: false,
                 addLoading: false,
                 addVisible: false,
-
+                departmentList: [],
+                department:[],
 
                 paibanbiao_renyuan: {},
                 rules: {
@@ -278,6 +309,38 @@
                     })
                 },
 
+                getDepartment: function (formName) {
+                    var _this = this;
+                    axios.post(myUrl('renyuan/getDepartment'), {
+                        
+                    }).then(function (res) {
+                        if (res.code == 200) {
+                            _this.departmentList = res.data;
+                            for (var i = 0; i < _this.departmentList.length; i++) {
+                                if (_this.department.indexOf(_this.departmentList[i].department_name) == -1) {
+                                    _this.department.push(_this.departmentList[i].department_name)
+                                }
+                            }
+                            _this.departmentList = [];
+                            for (var i = 0; i < _this.department.length; i++) {
+                                _this.departmentList.push({ department_name: _this.department[i] })
+                            }
+
+                        }
+                        if (res.code == 500) {
+                            _this.$notify({
+                                title: res.msg,
+                                type: 'error'
+                            });
+                        }
+                        _this.loading = false;
+                    }).catch(function (err) {
+                        _this.$notify.error({
+                            title: err.msg
+                        });
+                    })
+                },
+
 
 
 
@@ -285,6 +348,7 @@
 
             mounted: function () {
                 this.getList();
+                this.getDepartment();
             }
         })
     </script>
