--- a/Web/scheduling/web/index.html
+++ b/Web/scheduling/web/index.html
@@ -86,6 +86,10 @@
                         <i class="el-icon-s-management"></i>
                         <span slot="title">排班明细</span>
                     </el-menu-item>
+                    <el-menu-item index="账号管理" data-src="userInfo.html">
+                        <i class="el-icon-s-management"></i>
+                        <span slot="title">账号管理</span>
+                    </el-menu-item>
                 </el-menu>
             </div>
             <el-main class="main">
