--- a/Web/scheduling/web/userInfo.html
+++ b/Web/scheduling/web/userInfo.html
@@ -16,15 +16,12 @@
     <title>云合排产管理系统</title>
 </head>
 <body>
-    <div id="order_check" style="display: none;" :style="{display: 'block'}">
+    <div id="userInfo" style="display: none;" :style="{display: 'block'}">
         <el-container>
             <el-main>
                 <el-row :gutter="10" style="margin-bottom: 20px">
                     <el-col :span="6">
-                        <el-input v-model="order_number" placeholder="查询订单" clearable></el-input>
-                    </el-col>
-                    <el-col :span="6">
-                        <el-input v-model="moudle" placeholder="查询模块" clearable></el-input>
+                        <el-input v-model="user_code" placeholder="查询账号" clearable></el-input>
                     </el-col>
                     <el-col :span="8">
                         <el-button-group>
@@ -47,23 +44,14 @@
                                 ref="updateForm"
                                 label-width="80px"
                             >
-                                <el-form-item label="订单号" prop="order_number">
-                                    <el-input v-model="props.row.order_number" style="width: 220px"></el-input>
+                                <el-form-item label="账号" prop="user_code">
+                                    <el-input v-model="props.row.user_code" style="width: 220px"></el-input>
                                 </el-form-item>
-                                <el-form-item label="模块" prop="moudle">
-                                    <el-input v-model="props.row.moudle" style="width: 220px"></el-input>
+                                <el-form-item label="密码" prop="password">
+                                    <el-input v-model="props.row.password" style="width: 220px"></el-input>
                                 </el-form-item>
-                                <el-form-item label="日期" class="labelStyle">
-                                    <el-date-picker 
-                                        style="width:220px"
-                                        v-model="props.row.riqi" 
-                                        type="date" 
-                                        placeholder="选择日期" 
-                                        value-format="yyyy-MM-dd">
-                                    </el-date-picker>
-                                </el-form-item>
-                                <el-form-item label="数量" prop="num">
-                                    <el-input v-model="props.row.num" style="width: 220px"></el-input>
+                                <el-form-item label="部门" prop="department_name">
+                                    <el-input v-model="props.row.department_name" style="width: 220px"></el-input>
                                 </el-form-item>
                             </el-form>
 
@@ -76,10 +64,9 @@
                         </template>
                     </el-table-column>
 
-                    <el-table-column prop="order_number" label="订单号" sortable></el-table-column>
-                    <el-table-column prop="moudle" label="模块" sortable></el-table-column>
-                    <el-table-column prop="riqi" label="日期" sortable></el-table-column>
-                    <el-table-column prop="num" label="数量" sortable></el-table-column>
+                    <el-table-column prop="user_code" label="账号" sortable></el-table-column>
+                    <el-table-column prop="password" label="密码" sortable></el-table-column>
+                    <el-table-column prop="department_name" label="部门" sortable></el-table-column>
                     <el-table-column label="操作">
                         <template slot-scope="scope">
                             <el-popconfirm title="确定删除吗？" @confirm="deleteOrder(scope.row.id)" hide-icon>
@@ -102,7 +89,7 @@
         </el-container>
 
          <el-drawer
-            title="新增订单核对"
+            title="注册账号"
             :visible.sync="addVisible"
             direction="ltr"
             :modal="false"
@@ -118,23 +105,14 @@
                 label-position="left"
                 status-icon
             >
-                <el-form-item label="订单号" prop="order_number">
-                    <el-input v-model="order.order_number" style="width: 220px"></el-input>
+                <el-form-item label="账号" prop="user_code">
+                    <el-input v-model="order.user_code" style="width: 220px"></el-input>
                 </el-form-item>
-                <el-form-item label="模块" prop="moudle">
-                    <el-input v-model="order.moudle" style="width: 220px"></el-input>
+                <el-form-item label="密码" prop="password">
+                    <el-input v-model="order.password" style="width: 220px"></el-input>
                 </el-form-item>
-                <el-form-item label="日期" class="labelStyle">
-                    <el-date-picker 
-                        style="width:220px"
-                        v-model="order.riqi" 
-                        type="date" 
-                        placeholder="选择日期" 
-                        value-format="yyyy-MM-dd">
-                    </el-date-picker>
-                </el-form-item>
-                <el-form-item label="数量" prop="num">
-                    <el-input v-model="order.num" style="width: 220px"></el-input>
+                <el-form-item label="部门" prop="department_name">
+                    <el-input v-model="order.department_name" style="width: 220px"></el-input>
                 </el-form-item>
                 </el-form>
                 <el-button 
@@ -148,16 +126,15 @@
 
      <script>
          new Vue({
-             el: '#order_check',
+             el: '#userInfo',
              data: {
                  now: 1,
                  size: 20,
                  total: 0,
                  list: [],
-                 order_number:'',
-                 moudle: '',
+                 user_code: '',
                  order: {},
-                 riqi:'',
+                 riqi: '',
 
                  loading: false,
                  updateLoading: false,
@@ -183,9 +160,8 @@
                  getList: function () {
                      var _this = this;
                      _this.loading = true;
-                     axios.post(myUrl('orderCheck/getList'), {
-                         order_number: _this.order_number,
-                         moudle: _this.moudle,
+                     axios.post(myUrl('user/getList'), {
+                         user_code: _this.user_code,
                          nowPage: _this.now,
                          pageCount: _this.size,
                      }).then(function (res) {
@@ -212,13 +188,10 @@
                      _this.$refs[formName].validate(function (valid) {
                          if (valid) {
                              _this.loading = true;
-                             axios.post(myUrl('orderCheck/save'), {
-                                 order_check: _this.$refs[formName].model
-
+                             axios.post(myUrl('user/save'), {
+                                 user_info: _this.$refs[formName].model
                              }).then(function (res) {
                                  if (res.code == 200) {
-                                     //_this.total = res.data.total
-                                     // _this.list = res.data.pageList
                                      _this.deptVisible = false,
                                      _this.getList();
                                  }
@@ -269,7 +242,7 @@
 
                  deleteOrder: function (id) {
                      var _this = this;
-                     axios.post(myUrl('orderCheck/delete'), {
+                     axios.post(myUrl('user/delete'), {
                          id: id,
                      }).then(function (res) {
                          if (res.code == 200) {
@@ -298,8 +271,8 @@
                      _this.$refs[formName].validate(function (valid) {
                          if (valid) {
                              _this.updateLoading = true;
-                             axios.post(myUrl('orderCheck/update'), {
-                                 order_check: _this.$refs[formName].model
+                             axios.post(myUrl('user/update'), {
+                                 user_info: _this.$refs[formName].model
                              }).then(function (res) {
                                  if (res.code == 200) {
                                      _this.$notify({
