--- a/Web/scheduling/web/department_new.html
+++ b/Web/scheduling/web/department_new.html
@@ -216,8 +216,13 @@
                     { value: "BOM", text: "BOM" },
                     { value: "订单", text: "订单" },
                     { value: "排产", text: "排产" },
+                    { value: "排产核对", text: "排产核对" },
                     { value: "汇总", text: "汇总" },
                     { value: "部门", text: "部门" },
+                    { value: "人员信息", text: "人员信息" },
+                    { value: "排班", text: "排班" },
+                    { value: "排班明细", text: "排班明细" },
+                    { value: "账号管理", text: "账号管理" },
                 ],
                 now: 1,
                 size: 20,
