--- a/Web/scheduling/web/work.html
+++ b/Web/scheduling/web/work.html
@@ -40,7 +40,7 @@
                     <el-col :span="5">
                         <el-input placeholder="订单号" v-model="orderId" clearable></el-input>
                     </el-col>
-                    <el-col :span="15">
+                    <el-col :span="11">
                         <el-button-group>
                             <el-button 
                                 icon="el-icon-search" 
@@ -75,7 +75,7 @@
                     </el-col>
                     <el-col :span="5">
                         <el-input placeholder="删除" v-model="row_num" type="number" clearable></el-input>
-                    </el-col>
+                    </el-col :span="5">
                     <el-button-group>
                         <el-button
                             icon="el-icon-delete"
@@ -941,6 +941,10 @@
                         rowNum: _this.row_num
                     }).then(function (res) {
                         if (res.code == 200) {
+                            _this.$notify({
+                                title: res.msg,
+                                type: 'success'
+                            });
                             _this.workList();
                         }
                         if (res.code == 500) {
