--- a/Web/scheduling/web/summary.html
+++ b/Web/scheduling/web/summary.html
@@ -98,6 +98,7 @@
                         parentName: '父模块',
                         workNum: '合计产量'
                     }
+                    console.log(this.list)
                     exportExcel(this.list, columns, '汇总');
                 },
                 getList: function () {
