--- a/Web/scheduling/web/index.html
+++ b/Web/scheduling/web/index.html
@@ -90,6 +90,10 @@
                         <i class="el-icon-s-management"></i>
                         <span slot="title">账号管理</span>
                     </el-menu-item>
+                    <el-menu-item  data-src="../web/download/云合排产管理系统_使用说明.rar">
+                        <i class="el-icon-s-management"></i>
+                        <span slot="title">使用说明</span>
+                    </el-menu-item>
                 </el-menu>
             </div>
             <el-main class="main">
