--- a/Web/scheduling/web/work.html
+++ b/Web/scheduling/web/work.html
@@ -912,7 +912,7 @@
                         //var moduleInfo_name;
                         for(var i = 0;i<this.list.length;i++){   
                             for(var key in this.list[j]){
-                                if(key>=sd && key<=ed){
+                                if(key>=sd && key<=ed && tList[j]==this.list[i].orderId){
                                     workNumto=workNumto+parseFloat(this.list[j][key])
                                 }
                             }
